setup kafka listener